What's new in PinMAME:
----------------------
(see whatsnewVPM.txt for the Visual PinMAME exclusive changes!)


Version 3.6 (XX XXth, 2023) - ""
------------------------------------------------------------------------------

*** CORE/CPU ***
Improve Cosmic Flash sound emulation
Improve Zac11178 sound emulation (clown, poolcham, bbeltzac, mexico, zankor, spooky)

*** ROM SUPPORT *** Thanks to ipdb.org, Valerio Curzio, Matt's Basement Arcade, inkochnito
Correct Dumps:
Bell: Cosmic Flash (correct sound ROM)

Clones:
Metallica 0.52
Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
Tommy 1.02 (Belgian)
White Water P-6 (Prototype)

Removed Clones:
STTNG S7/DS (as these were just created to be able to use a P-1 sound rom, (for now) wired to P-4 instead)
White Water P-1/P-2 (as these were just created to be able to use the P-1 sound roms, now wired to P-6 as found on a real machine)



Version 3.5 (October 23rd, 2022) - "Trick or Treat"
------------------------------------------------------------------------------

Saving NVRAM for Juegos Populares

More gracefully handle parsing errors in invalid altsound CSV files to avoid crashes

Updated LISY support to 5.28-76 (Linux for Gottlieb System1 & System80, Bally, Atari, Williams and 'Home' Pinballs)

Updated to zlib 1.2.13

VS2022 build support

*** CORE/CPU ***
Better handle flickering lamps on Sega/Stern Whitestar machines
Fixed sound command parsing for more (all?) Sega/Stern Whitestar machines, so altsound mode 1 should work much better now for these, incl. global volume control parsing
Added global volume control parsing for altsound mode 1 on the older WPCs (i.e. non-DCS)
Fixed sound commander issues (missing 2nd part of command) for the WPC89 sound board
New WPC95 machine type: Phantom Haus with a special 128x64 DMD! (see https://www.flipprojets.fr/PhantomHaus_EN.php)
Finally some progress on Zaccaria's 11178 analog sound