@@ -10,13 +10,14 @@ Version 3.6 (XX XXth, 2023) - ""
 Improve Cosmic Flash sound emulation
 Improve Zac11178 sound emulation (clown, poolcham, bbeltzac, mexico, zankor, spooky)
 
-*** ROM SUPPORT *** Thanks to ipdb.org, Valerio Curzio, Matt's Basement Arcade, inkochnito
+*** ROM SUPPORT *** Thanks to ipdb.org, Valerio Curzio, Matt's Basement Arcade, inkochnito, flipprojets.fr
 Correct Dumps:
 Bell: Cosmic Flash (correct sound ROM)
 
 Clones:
 Metallica 0.52
 Sexy Girl (exact clone of Bally Playboy but using an additional image projector)
+Spirit rev. 3 (MOD)
 Tommy 1.02 (Belgian)
 White Water P-6 (Prototype)
 
